Bug 908880 - Update overflow rects when dynamically changing the filter property. r=jwatt