layout/style/nsStyleStruct.cpp
@@ -1154,6 +1154,7 @@ nsChangeHint nsStyleSVGReset::CalcDifference(const nsStyleSVGReset& aOther) cons
       !EqualURIs(mMask, aOther.mMask) ||
       mFilters != aOther.mFilters) {
     NS_UpdateHint(hint, nsChangeHint_UpdateEffects);
+    NS_UpdateHint(hint, nsChangeHint_UpdateOverflow); // for filters only
     NS_UpdateHint(hint, nsChangeHint_RepaintFrame);
   }
 
